# ovh_summarizer

./: README.md  Taskfile.yml  alembic.ini  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 9e5c10d4eb29_create_documents_table.py
api-doc/: openapi.json
deploy/: api.Dockerfile  docker-compose.yml  worker.Dockerfile
src/app/api/: depends.py  main.py
src/app/api/domain/: document_repository.py
src/app/api/routers/: router_documents.py
src/app/core/: config.py  database.py  exceptions.py  middleware.py  models.py  schemas.py
src/app/worker/: tasks.py  utils.py
src/app/worker/domain/: worker_document_repository.py
tests/: conftest.py
tests/api/: test_documents.py  test_smart_submission.py
tests/worker/: test_worker_tasks.py
