[project]
name = "summarizer"
version = "0.1.0"
description = "Async Summarizer API + Worker with full tests"
requires-python = ">=3.12,<3.13"

dependencies = [
    "alembic",
    "fastapi==0.116.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "SQLAlchemy[asyncio]==2.0.34",
    "asyncpg==0.29.0",
    "arq==0.25.0",
    "httpx==0.27.0",
    "trafilatura==1.4.0",
    "python-dotenv==1.0.1",
    "pytest==8.0.0",
    "pytest-asyncio",
    "polyfactory",
    "testcontainers",
    "ruff",
    "mypy"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_return_any = true
disallow_untyped_defs = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]
